add tailwind css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,7 @@
 <li><a [routerLink]="['']">HOME</a></li>
 <li><a [routerLink]="['public']">login</a></li>
 <li><a [routerLink]="['public/signin']">signin</a></li>
+<h1 class="text-3xl font-bold underline">
+  Hello world!
+</h1>
 <router-outlet></router-outlet>
